<resources>
    <string name="app_name">Projecte_M07</string>

    <string name="titulo_login">HÁBITOS ATÓMICOS</string>
    <string name="nocuenta_registrate">¿No tienes cuenta? Regístrate aquí</string>
    <string name="texto_boton_login">LOGIN</string>
    <string name="titulo_pantalla_habitos">Hábitos</string>
    <string name="texto_añadir_un_habito_extra">¿Añadir un hábito extra hoy?</string>
    <string name="boton_editarHabitos">Añadir y Editar Hábitos</string>
    <string name="nom_user_login">Nombre de usuario</string>
    <string name="hint_nomuser_login">Introduce tu usuario</string>
    <string name="contr_login">Contraseña</string>
    <string name="hint_contralogin">Introduce tu contraseña</string>
    <string name="hint_nombrehabito_fragment">Nombre del hábito</string>
    <string name="cancelar_fragmet">Cancelar</string>
    <string name="descripcion_logo_app">Logo de la app</string>
    <string name="menu_lateral_img">Abrir menú</string>
    <string name="sub_titulo_mis_habitos">Mis Hábitos</string>
    <string name="filtro_habitos_img">Filtrar hábitos</string>
    <string name="cruz_popup_img">Cerrar</string>
    <string name="titulo_pantalla_registro">Registro</string>
    <string name="h2_nombre_usuario">Nombre de usuario</string>
    <string name="textbox_introduce_usuario">Introduce tu usuario</string>
    <string name="h2_telefono">Teléfono</string>
    <string name="textbox_telefono">Introduce tu número</string>
    <string name="h2_mail">Correo electrónico</string>
    <string name="textbox_mail">ejemplo@correo.com</string>
    <string name="h2_password">Contraseña</string>
    <string name="textbox_password">Contraseña segura</string>
    <string name="h2_confirm_password">Confirmar contraseña</string>
    <string name="textbox_confirm_password">Repite tu contraseña</string>
    <string name="boton_register">Registrarse</string>
    <string name="error_validation_text">Error de validación</string>
    <string name="imag_type_habito">Imagen categoría</string>
    <string name="drawer_saludo">Hola, %1$s</string>
    <string name="titulo_ajustes">Ajustes</string>
    <string name="subtitulo_perfil">PERFIL</string>
    <string name="botton_editar_perfil">Editar perfil</string>
    <string name="subtitulo_boton_editar_perfil">Nombre, email y teléfono</string>
    <string name="subtitulo_cuenta">CUENTA</string>
    <string name="boton_cerrar_sesion">Cerrar sesión</string>
    <string name="boton_borrar_cuenta">Borrar cuenta</string>
    <string name="subtitulo_boton_borrar_cuenta">Se eliminará tu cuenta permanentemente</string>
    <string name="subtitulo_acercade">ACERCA DE</string>
    <string name="boton_version_app">Versión de la app</string>
    <string name="num_version">1.0.0</string>
    <string name="boton_volver_ajustes">Volver</string>
    <string name="titulo_crear_habito">Crear Nuevo Hábito</string>
    <string name="boton_sidebar_inCrearhabito">Abrir menú</string>
    <string name="subtitulo_crear_habito_nombre">Nombre del Hábito</string>
    <string name="edittext_crear_hint">Ej: Hacer ejercicio</string>
    <string name="subtiltulo_crear_categoria">Categoría</string>
    <string name="subtitulo_crear_esimportante">¿Es importante?</string>
    <string name="subtitulo_crear_hora">Hora del Hábito</string>
    <string name="boton_crear_hora">Seleccionar hora</string>
    <string name="boton_crear_hora_imagen">Seleccionar hora</string>
    <string name="boton_crear_habito">CREAR HÁBITO</string>
    <string name="boton_volver_crearhabito">VOLVER</string>
    <string name="titulo_borrar_habitos">Borrar Hábitos</string>
    <string name="subtitulo_borrar_habitos">Toca un hábito para eliminarlo</string>
    <string name="boton_volver_borrarhabitos">VOLVER</string>
    <string name="titulo_editar_perfil">Editar Perfil</string>
    <string name="subtitulo_editarperfil_nombre">Nombre de usuario</string>
    <string name="subtitulo_editarperfil_correo">Correo electrónico</string>
    <string name="subtitulo_editarperfil_telefono">Teléfono</string>
    <string name="boton_guardarcambios_editarperfil">GUARDAR CAMBIOS</string>
    <string name="boton_volver_editarperfil">VOLVER</string>
    <string name="buton_anterior_graficos">Anterior</string>
    <string name="buton_siguiente_graficos">Siguiente</string>
    <string name="buton_actu_graficos">Actualizar</string>
    <string name="graficos_salud">Salud</string>
    <string name="graficos_productividad">Productiv.</string>
    <string name="graficos_ocio">Ocio</string>
    <string name="graficos_bienestar">Bienestar</string>
    <string name="graficos_hogar">Hogar</string>
</resources>