<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    tools:context=".MainActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/logo_app1"
        android:contentDescription="@string/descripcion_logo_app"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp" />

    <!-- Título -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/green_primary"
        android:layout_marginBottom="80dp" />

    <!-- Usuario -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nom_user_login"
        android:textSize="14sp"
        android:textColor="@color/gray_dark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_nomuser_login"
        android:inputType="text"
        android:backgroundTint="@color/green_primary"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <!-- Contraseña -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contr_login"
        android:textSize="14sp"
        android:textColor="@color/gray_dark"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hint_contralogin"
        android:inputType="textPassword"
        android:backgroundTint="@color/green_primary"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <!-- Botón Login -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/texto_boton_login"
        style="@style/GreenBorderButton"
        android:layout_marginBottom="12dp" />

    <!-- Texto para ir al registro -->
    <TextView
        android:id="@+id/buttonGoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nocuenta_registrate"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/green_primary"
        android:padding="8dp"
        android:layout_marginTop="12dp" />
</LinearLayout>
