<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_borrar_habitos"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/green_primary"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitulo_borrar_habitos"
        android:textSize="14sp"
        android:textColor="@color/gray_dark"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerBorrarHabitos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonVolver"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/boton_volver_borrarhabitos"
        style="@style/GreenBorderButton"
        android:layout_margin="16dp" />

</LinearLayout>